Sat Apr 16 16:38:09 2005  Emre Turkay  <turkaye@dre.vanderbilt.edu>

        * DAnCE/examples/Hello/descriptors/run_test.pl: 

          Added perl script running all the steps for deploying an application.

Sat Apr 16 16:10:10 2005  Emre Turkay  <turkaye@dre.vanderbilt.edu>

        * DAnCE/Plan_Launcher/Plan_Launcher.cpp: 

          Added two command line options to plan_launcher to easily use in
          scripts. Now the launch and destruction of the application can be
          done in two steps.

Sat Apr 16 15:00:31 2005  Emre Turkay  <turkaye@dre.vanderbilt.edu>

        * DAnCE/examples/Hello/step-by-step.html: 

          Fixed typo on the documentation.

Fri Apr 15 12:54:46 CDT 2005  Will Otte  <wotte@dre.vanderbilt.edu>
	
	* DAnCE/Config_Handlers/Req_Handler.h

	Fixed a compile error on builds using -pendantic.
	
Fri Apr 15 10:46:56 CDT 2005  Gan Deng  <dengg@dre.vanderbilt.edu>

	* DAnCE/ciao/Container_Impl.cpp

	  Added a condition to check whether call standard configurator.

	* DAnCE/RepositoryManager/Repository_Manager.cpp

	  Modified to make it work by using ORBDebugLevel.

	* DAnCE/examples/Hello/Sender/Sender_exec.cpp

	  Fixed a warning message.

	* DAnCE/tests/NodeApplicationTest/NodeApp_test_client_simple.cpp
	* DAnCE/tests/NodeApplicationTest/NodeApp_test_client_ex.cpp

	  This should fix the warning message on Dynamic_Hash_Op_Lookup
	  build.

Thu Apr 14 10:54:56 CDT 2005  Will Otte  <wotte@dre.vanderbilt.edu>
	
	* DAnCE/ciao/Swapping_Servant_Home_Impl_T.cpp

	Fixed a warning due to ambiguous conversion.
	
Thu Apr 143 10:21:58 2005  Gan Deng  <dengg@dre.vanderbilt.edu>

	* DAnCE/examples/Hello/Sender/Sender.idl
	* DAnCE/examples/Hello/Sender/Sender_exec.cpp
	* DAnCE/examples/Hello/Sender/Sender_exec.h
	* DAnCE/examples/Hello/Sender/starter.cpp
	* DAnCE/examples/Hello/descriptors/Hello.cid
	* DAnCE/examples/Hello/descriptors/Receiver.cid
	* DAnCE/examples/Hello/descriptors/Sender.cid
